--- a/Backend/core/requirements.txt
+++ b/Backend/core/requirements.txt
@@ -1,38 +1,26 @@
-asgiref==3.5.0
-autopep8==1.6.0
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.12
-coreapi==2.3.3
-coreschema==0.0.4
-cryptography==36.0.2
+asgiref==3.7.2
+certifi==2024.2.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+cryptography==42.0.2
 defusedxml==0.7.1
-dj-rest-auth==2.2.4
-Django==4.0.3
-django-allauth==0.50.0
-django-cors-headers==3.11.0
-django-rest-framework==0.1.0
-djangorestframework==3.13.1
-drf-yasg==1.20.0
-idna==3.3
+dj-rest-auth==5.0.2
+Django==3.2
+django-allauth==0.61.0
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
+drf-yasg==1.21.7
+idna==3.6
 inflection==0.5.1
-itypes==1.2.0
-Jinja2==3.1.1
-MarkupSafe==2.1.1
-oauthlib==3.2.0
-packaging==21.3
-pycodestyle==2.8.0
+oauthlib==3.2.2
+packaging==23.2
 pycparser==2.21
-PyJWT==2.3.0
-pyparsing==3.0.7
+PyJWT==2.8.0
 python3-openid==3.2.0
-pytz==2022.1
-requests==2.27.1
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
 requests-oauthlib==1.3.1
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-six==1.16.0
-sqlparse==0.4.2
-toml==0.10.2
+sqlparse==0.4.4
 uritemplate==4.1.1
-urllib3==1.26.9
+urllib3==2.2.0
